# vkcscratch

./: .gdb_history  .gitignore  meson.build
shader/: shader.comp  shader.h
src/: main.c  shader.c
